<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/pref_cat_appearance"/>
	
	<ListPreference android:key="@string/pref_color_scheme" android:title="@string/pref_color_scheme_name"
		android:defaultValue="@string/pref_color_scheme_default" android:persistent="true"
		android:entries="@array/pref_color_scheme_entries" 
		android:entryValues="@array/pref_color_scheme_entry_values"/>

	<CheckBoxPreference android:key="@string/pref_green_text" android:title="@string/pref_green_text_name"
	    android:defaultValue="@string/pref_green_text_default" android:persistent="true"
	    android:summary="@string/pref_green_text_summary"/>
	
	<CheckBoxPreference android:key="@string/pref_show_round_totals" android:title="@string/pref_show_round_totals_name"
	    android:defaultValue="@string/pref_show_round_totals_default" android:persistent="true"/>
	
	<PreferenceCategory android:title="@string/pref_cat_config"/>

	<com.nolanlawson.keepscore.widget.IntegerEditTextPreference android:key="@string/pref_initial_score"
		android:title="@string/pref_initial_score_name" android:defaultValue="@string/pref_initial_score_default"
		android:persistent="true"/>
	
	<com.nolanlawson.keepscore.widget.IntegerEditTextPreference android:key="@string/pref_button_1"
		android:title="@string/pref_button_1_name" android:defaultValue="@string/pref_button_1_default"
		android:persistent="true"/>
	
	<com.nolanlawson.keepscore.widget.IntegerEditTextPreference android:key="@string/pref_button_2"
		android:title="@string/pref_button_2_name" android:defaultValue="@string/pref_button_2_default"
		android:persistent="true"/>
		
	<com.nolanlawson.keepscore.widget.IntegerEditTextPreference android:key="@string/pref_button_3"
		android:title="@string/pref_button_3_name" android:defaultValue="@string/pref_button_3_default"
		android:persistent="true"/>
		
	<com.nolanlawson.keepscore.widget.IntegerEditTextPreference android:key="@string/pref_button_4"
		android:title="@string/pref_button_4_name" android:defaultValue="@string/pref_button_4_default"
		android:persistent="true"/>		
	
	<com.nolanlawson.keepscore.widget.IntegerEditTextPreference android:key="@string/pref_2p_button_1"
		android:title="@string/pref_2p_button_1_name" android:defaultValue="@string/pref_2p_button_1_default"
		android:persistent="true"/>

	<com.nolanlawson.keepscore.widget.IntegerEditTextPreference android:key="@string/pref_2p_button_2"
		android:title="@string/pref_2p_button_2_name" android:defaultValue="@string/pref_2p_button_2_default"
		android:persistent="true"/>	
		
	<com.nolanlawson.keepscore.widget.IntegerEditTextPreference android:key="@string/pref_2p_button_3"
		android:title="@string/pref_2p_button_3_name" android:defaultValue="@string/pref_2p_button_3_default"
		android:persistent="true"/>
	
	<com.nolanlawson.keepscore.widget.IntegerEditTextPreference android:key="@string/pref_2p_button_4"
		android:title="@string/pref_2p_button_4_name" android:defaultValue="@string/pref_2p_button_4_default"
		android:persistent="true"/>		
		
	<PreferenceCategory android:title="@string/pref_cat_advanced"/>
	
	<com.nolanlawson.keepscore.widget.NonnegativeIntegerEditTextPreference android:key="@string/pref_update_delay"
		android:title="@string/pref_update_delay_name" android:defaultValue="@string/pref_update_delay_default"
		android:persistent="true" android:summary="@string/pref_update_delay_summary"/>
		
	<CheckBoxPreference android:key="@string/pref_use_wake_lock"
		android:title="@string/pref_use_wake_lock_name" android:defaultValue="@string/pref_use_wake_lock_default"
		android:persistent="true" android:summary="@string/pref_use_wake_lock_summary"/>
	
	<Preference android:key="@string/pref_reset" android:title="@string/pref_reset_name"
	    android:persistent="false"/>	

	<PreferenceCategory android:title="@string/pref_cat_about"/>
		
	<Preference android:key="@string/pref_about" android:title="@string/text_about" 
	    android:persistent="false"/>	
			
</PreferenceScreen>
